# compulsor

./: Pipfile  README.md  pyproject.toml
compulsor/: compulsor.py  discourse.py  formatting.py
